--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,9 +208,9 @@ table {
 .dropbtn {
 	color: white;
 	border: solid 1px gray;
-	background: #6e6e6e;
-	background: -webkit-gradient(linear, left top, left bottom, from(#DCDCDC), to(#888));
-	background: -moz-linear-gradient(top,  #DCDCDC,  #888);
+	background: #7f7f7f;
+	background: -webkit-gradient(linear, left top, left bottom, from(#989797), to(rgb(61, 61, 61)));
+	background: -moz-linear-gradient(top,  #8a8a8a,  #888);
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#DCDCDC', endColorstr='#888888');
   	cursor: pointer;
 	font: 14px/90% Arial, Helvetica, sans-serif;
